--- a/arch/riscv/configs/starfive_dubhe_defconfig
+++ b/arch/riscv/configs/starfive_dubhe_defconfig
@@ -16,6 +16,7 @@ CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE="rootfs.cpio"
 CONFIG_EXPERT=y
+CONFIG_PERF_EVENTS=y
 CONFIG_SOC_STARFIVE_DUBHE=y
 CONFIG_SMP=y
 CONFIG_HOTPLUG_CPU=y
