dt-bindings: riscv: Add compatible string for StarFive Dubhe CPU
Add compatible string "starfive,dubhe" for StarFive Dubhe CPU.

Signed-off-by: Ley Foon Tan <leyfoon.tan@linux.starfivetech.com>

--- a/Documentation/devicetree/bindings/riscv/cpus.yaml
+++ b/Documentation/devicetree/bindings/riscv/cpus.yaml
@@ -39,6 +39,7 @@ properties:
               - sifive,u5
               - sifive,u7
               - canaan,k210
+              - starfive,dubhe
           - const: riscv
       - items:
           - enum:
