riscv: configs: Dubhe: Enable virtualization and kvm
These two configs are needed to run KVM guest.

Signed-off-by: Tan En De <ende.tan@starfivetech.com>

--- a/arch/riscv/configs/starfive_dubhe_defconfig
+++ b/arch/riscv/configs/starfive_dubhe_defconfig
@@ -22,6 +22,8 @@ CONFIG_SOC_STARFIVE_DUBHE=y
 CONFIG_SMP=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_HZ_10=y
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
