riscv: configs: dubhe: Enable bridge networking and TUN/TAP driver
So that we can create virtual network consisting of bridge and
TAP interface attached to the bridge as a port.

Signed-off-by: Tan En De <ende.tan@starfivetech.com>

--- a/arch/riscv/configs/starfive_dubhe_defconfig
+++ b/arch/riscv/configs/starfive_dubhe_defconfig
@@ -65,6 +65,7 @@ CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_IP_NF_TARGET_REDIRECT=y
+CONFIG_BRIDGE=y
 CONFIG_NETLINK_DIAG=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
@@ -87,6 +88,7 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
 CONFIG_SCSI_VIRTIO=y
 CONFIG_NETDEVICES=y
+CONFIG_TUN=y
 CONFIG_VIRTIO_NET=y
 CONFIG_MACB=y
 CONFIG_STMMAC_ETH=y
