--- a/Documentation/devicetree/bindings/riscv/cpus.yaml
+++ b/Documentation/devicetree/bindings/riscv/cpus.yaml
@@ -39,7 +39,8 @@ properties:
               - sifive,u5
               - sifive,u7
               - canaan,k210
-              - starfive,dubhe
+              - starfive,dubhe-80
+              - starfive,dubhe-90
           - const: riscv
       - items:
           - enum:
