riscv: dts: starfive: dubhe: Add cpu-map DT node
Add cpu-map DT node.

Signed-off-by: Ley Foon Tan <leyfoon.tan@starfivetech.com>

--- a/arch/riscv/boot/dts/starfive/dubhe.dtsi
+++ b/arch/riscv/boot/dts/starfive/dubhe.dtsi
@@ -40,6 +40,18 @@
 				interrupt-controller;
 			};
 		};
+
+		cpu-map {
+			cluster0 {
+				core0 {
+					cpu = <&cpu0>;
+				};
+
+				core1 {
+					cpu = <&cpu1>;
+				};
+			};
+		};
 	};
 
 	soc {
