--- a/arch/riscv/boot/dts/starfive/dubhe.dtsi
+++ b/arch/riscv/boot/dts/starfive/dubhe.dtsi
@@ -15,6 +15,7 @@
 		cpu0: cpu@0 {
 			device_type = "cpu";
 			mmu-type = "riscv,sv48";
+			next-level-cache = <&l2_cache>;
 			reg = <0x0>;
 			riscv,isa = "rv64imafdcbh_sscofpmf";
 			tlb-split;
@@ -30,6 +31,7 @@
 			compatible = "starfive,dubhe", "riscv";
 			device_type = "cpu";
 			mmu-type = "riscv,sv48";
+			next-level-cache = <&l2_cache>;
 			reg = <0x1>;
 			riscv,isa = "rv64imafdcbh_sscofpmf";
 			tlb-split;
@@ -51,6 +53,15 @@
 					cpu = <&cpu1>;
 				};
 			};
+		};
+
+		l2_cache: cache-controller {
+			compatible = "cache";
+			cache-block-size = <64>;
+			cache-level = <2>;
+			cache-sets = <4096>;
+			cache-size = <0x200000>;
+			cache-unified;
 		};
 	};
 
